# dada_prod

./: .env.backup  .gitignore  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml
assets/: index-BKYfuD4l.css  index-DpCtaLdJ.js  index-Dywd6HZ3.js
backend/: Dockerfile  package-lock.json  package.json  requirements.txt  seed.js  server.js
backend/app/api/: celery_app.py  core_modules.py  dependencies.py  main.py  tasks.py
backend/app/api/routers/v1/: attack_routes.py  data_routes.py  defence_routes.py  eval_routes.py  history_routes.py  llm_routes.py  task_routes.py
backend/data/: final_results.json
backend/db/: db.js  init.sql  seed_results.js
backend/fastapi/: llm_manager.py  main.py
backend/llms/mistral_7b/: Dockerfile
backend/llms/phi3_mini/: Dockerfile
backend/monitoring/: prometheus.yml
backend/utilities/: test_llm.html  test_postgres.sql  test_slm.html
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
frontend/public/: consolidated_prompt_injection_attacks.csv
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatWidget.jsx  GrafanaPanel.jsx  LiveMetrics.jsx  Visualizations.jsx
frontend/src/data/: attacks.json  models.json
frontend/src/tabs/: AboutTab.jsx  ChatTab.jsx  HistoryTab.jsx  MainTab.jsx  README.md  TaxonomyTab.jsx  TeamTab.jsx  data.js  index.html  script (2).js  script.js  styles.css
ops/grafana/provisioning/dashboards/: dashboards.yml
ops/prometheus/: prometheus.yml
